web/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
spec:
  selector:
    app: nextjs
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30000
  type: NodePort
