web/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: next-ingress
  namespace: web
spec:
  rules:
    - host: next.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextjs-service
                port:
                  number: 3000
#kubectl patch svc airflow-webserver -n airflow -p '{"spec": {"type": "NodePort", "ports": [{"port": 8080, "targetPort": 8080, "nodePort": 31000}]}}'
# /etc/hosts
# 127.0.0.1 airflow.example.com
